# langchain_sql

./: .env  .env.example  .gitignore  books.sqlite  pyproject.toml  readme.md  tox.ini
backend/: data_parser.py  main.py
chains/: query_prompt.py
container/: Dockerfile
data/: booksummaries.txt
tests/: test_main.py
